fix serializer