@@ -1,10 +1,14 @@
 package dev.lcy0x1.core.util;
 
 import net.minecraft.block.Block;
+import net.minecraft.enchantment.Enchantment;
+import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.*;
+import net.minecraft.potion.Effect;
 import net.minecraft.util.ResourceLocation;
 import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.vector.Vector3d;
 import net.minecraftforge.registries.ForgeRegistries;
 import net.minecraftforge.registries.IForgeRegistry;
 import net.minecraftforge.registries.IForgeRegistryEntry;
@@ -42,17 +46,36 @@ public class Automator {
 		new ClassHandler<>(byte[].class, ByteArrayNBT::getAsByteArray, ByteArrayNBT::new);
 		new ClassHandler<StringNBT, String>(String.class, INBT::getAsString, StringNBT::valueOf);
 		new ClassHandler<>(ItemStack.class, ItemStack::of, is -> is.save(new CompoundNBT()));
-		new ClassHandler<CompoundNBT, BlockPos>(BlockPos.class, tag -> new BlockPos(tag.getInt("x"), tag.getInt("y"), tag.getInt("z")), obj -> {
-			CompoundNBT tag = new CompoundNBT();
-			tag.putInt("x", obj.getX());
-			tag.putInt("y", obj.getY());
-			tag.putInt("z", obj.getZ());
-			return tag;
-		});
-		new ClassHandler<IntArrayNBT, UUID>(UUID.class, NBTUtil::loadUUID, NBTUtil::createUUID);
+		new ClassHandler<CompoundNBT, BlockPos>(BlockPos.class,
+				tag -> new BlockPos(tag.getInt("x"), tag.getInt("y"), tag.getInt("z")),
+				obj -> {
+					CompoundNBT tag = new CompoundNBT();
+					tag.putInt("x", obj.getX());
+					tag.putInt("y", obj.getY());
+					tag.putInt("z", obj.getZ());
+					return tag;
+				});
+		new ClassHandler<CompoundNBT, Vector3d>(Vector3d.class,
+				tag -> new Vector3d(tag.getDouble("x"), tag.getDouble("y"), tag.getDouble("z")),
+				obj -> {
+					CompoundNBT tag = new CompoundNBT();
+					tag.putDouble("x", obj.x());
+					tag.putDouble("y", obj.y());
+					tag.putDouble("z", obj.z());
+					return tag;
+				});
+
+		new ClassHandler<StringNBT, UUID>(UUID.class,
+				tag -> UUID.fromString(tag.getAsString()),
+				id -> StringNBT.valueOf(id.toString())
+		);
 		new ClassHandler<CompoundNBT, CompoundNBT>(CompoundNBT.class, e -> e, e -> e);
 		new ClassHandler<ListNBT, ListNBT>(ListNBT.class, e -> e, e -> e);
+		new ClassHandler<StringNBT, ResourceLocation>(ResourceLocation.class, tag -> new ResourceLocation(tag.getAsString()), rl -> StringNBT.valueOf(rl.toString()));
 		new RegistryClassHandler<>(Block.class, () -> ForgeRegistries.BLOCKS);
+		new RegistryClassHandler<>(Item.class, () -> ForgeRegistries.ITEMS);
+		new RegistryClassHandler<>(Enchantment.class, () -> ForgeRegistries.ENCHANTMENTS);
+		new RegistryClassHandler<>(Effect.class, () -> ForgeRegistries.POTIONS);
 	}
 
 	public static Object fromTag(CompoundNBT tag, Class<?> cls, Object obj, Predicate<SerialClass.SerialField> pred)
@@ -60,7 +83,7 @@ public class Automator {
 		if (tag.contains("_class"))
 			cls = Class.forName(tag.getString("_class"));
 		if (obj == null)
-			obj = cls.newInstance();
+			obj = cls.getConstructor().newInstance();
 		Class<?> mcls = cls;
 		while (cls.getAnnotation(SerialClass.class) != null) {
 			for (Field f : cls.getDeclaredFields()) {
@@ -70,7 +93,7 @@ public class Automator {
 				INBT itag = tag.get(f.getName());
 				f.setAccessible(true);
 				if (itag != null)
-					f.set(obj, fromTagRaw(itag, f.getType(), f.get(obj), sf, pred));
+					f.set(obj, fromTagRaw(itag, TypeInfo.of(f), f.get(obj), pred));
 			}
 			cls = cls.getSuperclass();
 		}
@@ -92,61 +115,56 @@ public class Automator {
 	}
 
 	@SuppressWarnings({"unchecked", "rawtypes"})
-	public static Object fromTagRaw(INBT tag, Class<?> cls, Object def, SerialClass.SerialField sfield, Predicate<SerialClass.SerialField> pred) throws Exception {
+	public static Object fromTagRaw(INBT tag, TypeInfo cls, Object def, Predicate<SerialClass.SerialField> pred) throws Exception {
 		if (tag == null)
-			if (cls == ItemStack.class)
+			if (cls.getAsClass() == ItemStack.class)
 				return ItemStack.EMPTY;
 			else
 				return null;
-		if (MAP.containsKey(cls))
-			return MAP.get(cls).fromTag.apply(tag);
+		if (MAP.containsKey(cls.getAsClass()))
+			return MAP.get(cls.getAsClass()).fromTag.apply(tag);
 		if (cls.isArray()) {
 			ListNBT list = (ListNBT) tag;
 			int n = list.size();
-			Class<?> com = cls.getComponentType();
-			Object ans = Array.newInstance(com, n);
+			TypeInfo com = cls.getComponentType();
+			Object ans = Array.newInstance(com.getAsClass(), n);
 			for (int i = 0; i < n; i++) {
-				Array.set(ans, i, fromTagRaw(list.get(i), com, null, null, pred));
+				Array.set(ans, i, fromTagRaw(list.get(i), com, null, pred));
 			}
 			return ans;
 		}
-		if (List.class.isAssignableFrom(cls)) {
+		if (List.class.isAssignableFrom(cls.getAsClass())) {
 			ListNBT list = (ListNBT) tag;
-			int n = list.size();
-			if (sfield.generic().length != 1)
-				throw new Exception("generic field not correct for list");
-			Class<?> com = sfield.generic()[0];
+			TypeInfo com = cls.getGenericType(0);
 			if (def == null)
 				def = cls.newInstance();
 			List ans = (List<?>) def;
 			ans.clear();
-			for (INBT inbt : list) {
-				ans.add(fromTagRaw(inbt, com, null, null, pred));
+			for (INBT iTag : list) {
+				ans.add(fromTagRaw(iTag, com, null, pred));
 			}
 			return ans;
 		}
-		if (Map.class.isAssignableFrom(cls)) {
+		if (Map.class.isAssignableFrom(cls.getAsClass())) {
 			if (def == null)
 				def = cls.newInstance();
-			if (sfield.generic().length != 2)
-				throw new Exception("generic field not correct for map");
-			Class<?> key = sfield.generic()[0];
-			Class<?> val = sfield.generic()[1];
-			if (key != String.class)
-				throw new Exception("non-string key not supported");
+			TypeInfo key = cls.getGenericType(0);
+			TypeInfo val = cls.getGenericType(1);
 			CompoundNBT ctag = (CompoundNBT) tag;
 			Map map = (Map) def;
 			map.clear();
 			for (String str : ctag.getAllKeys()) {
-				map.put(str, fromTagRaw(ctag.get(str), val, null, null, pred));
+				Object mkey = key.getAsClass() == String.class ? str :
+						MAP.get(key.getAsClass()).fromTag.apply(StringNBT.valueOf(str));
+				map.put(mkey, fromTagRaw(ctag.get(str), val, null, pred));
 			}
 			return map;
 		}
-		if (cls.isEnum()) {
-			return Enum.valueOf((Class) cls, tag.getAsString());
+		if (cls.getAsClass().isEnum()) {
+			return Enum.valueOf((Class) cls.getAsClass(), tag.getAsString());
 		}
-		if (cls.getAnnotation(SerialClass.class) != null)
-			return fromTag((CompoundNBT) tag, cls, def, pred);
+		if (cls.getAsClass().getAnnotation(SerialClass.class) != null)
+			return fromTag((CompoundNBT) tag, cls.getAsClass(), def, pred);
 		throw new Exception("unsupported class " + cls);
 	}
 
@@ -165,7 +183,7 @@ public class Automator {
 					continue;
 				f.setAccessible(true);
 				if (f.get(obj) != null)
-					tag.put(f.getName(), toTagRaw(f.getType(), f.get(obj), sf, pred));
+					tag.put(f.getName(), toTagRaw(TypeInfo.of(f), f.get(obj), pred));
 			}
 			cls = cls.getSuperclass();
 		}
@@ -181,48 +199,43 @@ public class Automator {
 		return (T) ExceptionHandler.get(() -> fromTag(tag, cls, null, f -> true));
 	}
 
-	@SuppressWarnings("unchecked")
-	public static INBT toTagRaw(Class<?> cls, Object obj, SerialClass.SerialField sfield, Predicate<SerialClass.SerialField> pred) throws Exception {
-		if (MAP.containsKey(cls))
-			return MAP.get(cls).toTag.apply(obj);
+	public static INBT toTagRaw(TypeInfo cls, Object obj, Predicate<SerialClass.SerialField> pred) throws Exception {
+		if (MAP.containsKey(cls.getAsClass()))
+			return MAP.get(cls.getAsClass()).toTag.apply(obj);
 		if (cls.isArray()) {
 			ListNBT list = new ListNBT();
 			int n = Array.getLength(obj);
-			Class<?> com = cls.getComponentType();
+			TypeInfo com = cls.getComponentType();
 			for (int i = 0; i < n; i++) {
-				list.add(toTagRaw(com, Array.get(obj, i), null, pred));
+				list.add(toTagRaw(com, Array.get(obj, i), pred));
 			}
 			return list;
 		}
-		if (List.class.isAssignableFrom(cls)) {
-			if (sfield.generic().length != 1)
-				throw new Exception("generic field not correct for list");
+		if (List.class.isAssignableFrom(cls.getAsClass())) {
 			ListNBT list = new ListNBT();
 			int n = ((List<?>) obj).size();
-			Class<?> com = sfield.generic()[0];
+			TypeInfo com = cls.getGenericType(0);
 			for (int i = 0; i < n; i++) {
-				list.add(toTagRaw(com, ((List<?>) obj).get(i), null, pred));
+				list.add(toTagRaw(com, ((List<?>) obj).get(i), pred));
 			}
 			return list;
 		}
-		if (Map.class.isAssignableFrom(cls)) {
-			if (sfield.generic().length != 2)
-				throw new Exception("generic field not correct for map");
-			Class<?> key = sfield.generic()[0];
-			Class<?> val = sfield.generic()[1];
-			if (key != String.class)
-				throw new Exception("non-string key not supported");
+		if (Map.class.isAssignableFrom(cls.getAsClass())) {
+			TypeInfo key = cls.getGenericType(0);
+			TypeInfo val = cls.getGenericType(1);
 			CompoundNBT ctag = new CompoundNBT();
-			Map<String, ?> map = (Map<String, ?>) obj;
-			for (String str : map.keySet()) {
-				ctag.put(str, toTagRaw(val, map.get(str), null, pred));
+			Map<?, ?> map = (Map<?, ?>) obj;
+			for (Object str : map.keySet()) {
+				String mkey = key.getAsClass() == String.class ? (String) str :
+						toTagRaw(key, str, pred).getAsString();
+				ctag.put(mkey, toTagRaw(val, map.get(str), pred));
 			}
 			return ctag;
 		}
-		if (cls.isEnum())
+		if (cls.getAsClass().isEnum())
 			return StringNBT.valueOf(((Enum<?>) obj).name());
-		if (cls.getAnnotation(SerialClass.class) != null)
-			return toTag(new CompoundNBT(), cls, obj, pred);
+		if (cls.getAsClass().getAnnotation(SerialClass.class) != null)
+			return toTag(new CompoundNBT(), cls.getAsClass(), obj, pred);
 		throw new Exception("unsupported class " + cls);
 	}
 
